# Basic-work-of-robot

Camera/: readme
Camera/src/cam_node/: CMakeLists.txt  package.xml  readme.txt  realsense配置
Camera/src/cam_node/src/: cam_node.cpp
CarSpace/: can權限問題
CarSpace/src/: readme
CarSpace/src/control_handle/: config.yaml
CarSpace/src/control_handle/src/: main.cpp
CarSpace/src/test_handle/: CMakeLists.txt  package.xml
CarSpace/src/test_handle/src/: main.cpp
hybridA/src/hybrid-a-star-annotation-master/: CMakeLists.txt
hybridA/src/hybrid-a-star-annotation-master/include/: collisiondetection.h  constants.h
hybridA/src/hybrid-a-star-annotation-master/src/: algorithm.cpp  collisiondetection.cpp  main.cpp  node3d.cpp  planner.cpp  smoother.cpp
planeoct_server/: CMakeLists.txt  package.xml
planeoct_server/include/: Teclas.hpp  astar_planner.h  dkm.hpp  dkm_parallel.hpp  dkm_utils.hpp  spectral_clustering.hpp  surfeltree.hpp
planeoct_server/src/: Teclas.cpp  addition.cu  astar_planner.cpp  cudatest.cpp  output.txt  pr30.par  qhull.cpp  spectral_clustering.cpp  subspace.cpp  test1使用了多帧存储一次拟合但是没有利用两帧的分别位姿态.cpp  vp6.atsp  一帧深度图像转成点云然后降采样再拟合法向量.cpp  把octo为单位的拟合法向量放到回调函数.cpp  测试一帧深度图像进行多次平面拟合的时间.cpp  自定oct并计算oct的法向量.cpp
qhull_test/: qhu.vtk  screenshot-1694517755.cam
qhull_test/src/control_handle/: CMakeLists.txt  package.xml
qhull_test/src/control_handle/src/: keyboard.cpp
qhull_test/src/octomap_server/: CMakeLists.txt  package.xml
qhull_test/src/octomap_server/include/: surfeltree.hpp
qhull_test/src/octomap_server/launch/: t.launch
qhull_test/src/octomap_server/src/: filter.cpp  getrec.cpp  subspace.cpp  test1.cpp  test1_p.cpp  将深度图分配到oct中计算法向量.cpp  把octo为单位的拟合法向量放到回调函数.cpp  法向量和距离均值.cpp  深度图像转换为点云.cpp  相关信息
